# simple-sqlite-todo-list

./: Cargo.toml  README.md  spec.md  todos.db
src/: google_tasks.rs  main.rs
