# Cargo.toml

[package]
name = "walid_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reverted yup-oauth2 to your original version (8.3.2) as it wasn't the issue.
yup-oauth2 = { version = "8.3.2", features = ["hyper-rustls"] }

hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.23"
tokio = { version = "1", features = ["full"] }

serde = "1.0.219"
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["json"] }
async-trait = "0.1.89"

# Crucial change: Remove the `serde` feature from the `time` dependency.
# This prevents `time` from globally trying to deserialize RFC3339 strings
# into `OffsetDateTime`, which was causing the conflict with your `Option<String>`
# and the nanosecond precision.
time = "0.3"